# SelectorFramework

./: .gitignore  CMakeLists.txt  Kernel.cc  RingBuf.cc  SelectorFramework.cc  SinglesVsMuons.cc  Util.cc  classes.cc  classes2.cc  classes_old.cc  test.cc  test2.cc  test2_old.cc
core/: Assert.hh  BaseIO.cc  BaseIO.hh  Clock.cc  Clock.hh  ConfigTool.cc  ConfigTool.hh  DirectReader.hh  EventBuf.cc  EventBuf.hh  Kernel.cc  Kernel.hh  OutTree.cc  PrefetchLooper.hh  RingBuf.cc  RingBuf.hh  SeqReader.cc  SimpleAlg.cc  SimpleAlg.hh  Strings.cc  Strings.hh  SyncReader.cc  SyncReader.hh  TimeSyncReader.cc  TimeSyncReader.hh  TreeWriter.cc  TreeWriter.hh  Util.cc  Util.hh
make/: BuildPostamble.mk  BuildPreamble.mk
samples/: SinglesVsMuons.cc  test.cc
scripts/: clean.sh
tests/: stress_ringbuf.py  test_io.cc
